# ImoveisWebScrap

./: .env  .env_exemplo  .gitignore  README.md  pyproject.toml  requirements.txt
coleta/coleta/: settings.py
coleta/coleta/spiders/: zapimoveis.py
quintoandarscrap/: scrapy.cfg
quintoandarscrap/data/: casas.jsonl
quintoandarscrap/quintoandarscrap/: items.py  middlewares.py  pipelines.py  settings.py
quintoandarscrap/quintoandarscrap/spiders/: quintoandar.py
src/: extract.py  load.py  pipeline.py  transform.py
